# wukong-cube

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
datagen/: add_timestamp.cpp
datagen/graphcube/: data_statistics.py  data_transfer_v1.py  data_transfer_v2_even.sh  data_transfer_v3_rdf.py  data_transfer_v4_amplify.py  data_transfer_v5.py
docs/notes/: PYTHON.md  STRSERVER.md  tRDF.md
docs/performance/: tSPARQL-LUBM10240-20210727.md
java/: pom.xml
java/src/main/java/com/wukong/: WukongGraph.java
java/src/test/java/com/wukong/: WukongGraphTest.java
python/: build.sh  setup.py  test.py
scripts/: build_docs.sh  build_test.sh  code_format.sh  sync.sh  test_gen_hdata.sh
scripts/compare/sparql/: contain_hq  e2v_multi_hq  e2v_single_hq  e2v_single_hq.fmt  in_hq  intersect_hq  intersect_hq.fmt  v2e_multi_hq  v2e_single_hq  v2v_hq
scripts/hyper_query/basic/e2e/: contain_hq  in_hq
scripts/hyper_query/basic/e2v/: singleE_hq
scripts/hyper_query/gen_data/basic/e2e/: contain_hq  in_hq  intersect_hq
scripts/hyper_query/gen_data/basic/e2v/: multiE_hq  singleE_hq
scripts/hyper_query/gen_data/basic/v2e/: multiV_hq  singleV_hq
scripts/hyper_query/gen_data/basic/v2v/: intersect_hq
scripts/hyper_query/graphcube_30/basic/e2e/: contain_hq  in_hq  intersect_hq
scripts/hyper_query/graphcube_30/basic/e2v/: multiE_hq  singleE_hq
scripts/hyper_query/graphcube_30/basic/gbt/: etype_hq  vtype_hq
scripts/hyper_query/graphcube_30/basic/v2e/: multiV_hq  singleV_err_hq  singleV_hq
scripts/hyper_query/graphcube_30/basic/v2v/: intersect_hq
scripts/hyper_query/graphcube_30/complex/: const_hq  contain_hq  count_hq  exist_eq_hq  exist_hq  intersect_hq  type_hq
scripts/hyper_query/graphcube_30/emulator/: basic_contain_hq  basic_singleE_hq  basic_singleV_hq  mix_config
scripts/hyper_query/graphcube_30/emulator/all_complex/: complex_const_hq  complex_contain_hq  complex_count_hq  complex_exist_eq_hq  complex_exist_hq  complex_intersect_hq  complex_type_hq  mix_config
scripts/hyper_query/graphcube_30/emulator/all_simple/: basic_etype_hq  basic_in_hq  basic_intersectE_hq  basic_intersectV_hq  basic_multiE_hq  basic_multiV_hq  mix_config
scripts/hyper_query/graphcube_30/emulator/mix/: mix_config
scripts/hyper_query/test/basic/e2e/: intersect_hq
scripts/hyper_query/test/basic/e2v/: multiE_hq
scripts/hyper_query/test/basic/v2e/: multiV_hq  singleV_hq
scripts/hyper_query/test/basic/v2v/: intersect_hq
scripts/hyper_query/test/complex/: type_hq
scripts/sparql_query/lubm/ask/: lubm_q1  lubm_q2  lubm_q3  lubm_q4  lubm_q5  lubm_q6  lubm_q7  lubm_q8
scripts/sparql_query/lubm/hyper/: hyper_q7
scripts/sparql_query/lubm/hyper/hyper_plan/: lubm_q7.fmt
scripts/sparql_query/lubm/time/: hop1_q3  mix_hop1  plan_hop1
scripts/sparql_query/lubm/time/emulator/: mix_hop1  mix_hop2  mix_hop3  mix_hop4  plan_hop1  plan_hop2  plan_hop3  plan_hop4
scripts/sparql_query/lubm/time/emulator/hop1/: hop1.fmt  hop1_q1  hop1_q2  hop1_q3
scripts/sparql_query/lubm/time/emulator/hop2/: hop2_q1  hop2_q2  hop2_q3
scripts/sparql_query/lubm/time/emulator/hop3/: hop3_q1  hop3_q2  hop3_q2.fmt  hop3_q3  hop3_q3.fmt
scripts/sparql_query/lubm/time/emulator/hop4/: hop4_q1  hop4_q1.fmt  hop4_q2  hop4_q2.fmt  hop4_q3  hop4_q3.fmt
src/: wukong.cpp
src/api/java/: WukongGraph.cpp  WukongGraph.h
src/api/python/: WukongGraph.cpp  WukongGraph.h  module.cpp
src/client/: console.hpp  console_proxy.hpp  proxy.hpp  rpc_client.hpp  rpc_proxy.hpp  test_client.cpp
src/core/common/: bundle.hpp  config.hpp  errors.hpp  global.hpp  hypertype.hpp  monitor.hpp  rdma.hpp  status.hpp  string_server.hpp  type.hpp
src/core/engine/: engine.hpp  hyper.hpp  msgr.hpp  rmap.hpp  sparql.hpp  tsparql.hpp
src/core/hypergraph/: hypergraph.hpp  hypervertex.hpp
src/core/hyperquery/: absyn.hpp  parser.hpp  query.hpp  sparql.l  sparql.y
src/core/network/: adaptor.hpp
src/core/sparql/: absyn.hpp  parser.hpp  query.hpp  sparql.l  sparql.y  sparql_time.l
src/core/store/: dgraph.hpp  dynamic_dgraph.hpp  dynamic_kvstore.hpp  kvstore.hpp  rdf_dgraph.hpp  rdma_cache.hpp  segment_dgraph.hpp  segment_meta.hpp  segment_rdf_dgraph.hpp  static_dgraph.hpp  static_kvstore.hpp  vertex.hpp
src/gpu/: gpu_agent.hpp
src/loader/: dynamic_loader.hpp  hypergraph_loader.hpp  loader_interface.hpp  rdf_loader.hpp
src/optimizer/: planner.hpp  stats.hpp
src/stringserver/: run_string_server.cpp  sscache_request.hpp  string_cache.hpp  string_mapping.hpp  string_proxy.hpp  string_server.hpp  test_string_client.cpp
tests/: test_cache.cc  test_parser.cc
tests/gpu/: test-cache.cpp
